; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_fs.c_uv_fs_utime.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_fs.c_uv_fs_utime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { double, double }

@UV_FS_UTIME = common dso_local global i32 0, align 4
@POST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_fs_utime(i32* %0, %struct.TYPE_8__* %1, i8* %2, double %3, double %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca double, align 8
  %12 = alloca double, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %9, align 8
  store i8* %2, i8** %10, align 8
  store double %3, double* %11, align 8
  store double %4, double* %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = load i32, i32* @UV_FS_UTIME, align 4
  %16 = call i32 @INIT(i32 %15)
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = load i32*, i32** %13, align 8
  %20 = icmp ne i32* %19, null
  %21 = zext i1 %20 to i32
  %22 = call i32 @fs__capture_path(%struct.TYPE_8__* %17, i8* %18, i32* null, i32 %21)
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* %14, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %6
  %26 = load i32, i32* %14, align 4
  %27 = call i32 @uv_translate_sys_error(i32 %26)
  store i32 %27, i32* %7, align 4
  br label %40

28:                                               ; preds = %6
  %29 = load double, double* %11, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  store double %29, double* %33, align 8
  %34 = load double, double* %12, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 1
  store double %34, double* %38, align 8
  %39 = load i32, i32* @POST, align 4
  br label %40

40:                                               ; preds = %28, %25
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

declare dso_local i32 @INIT(i32) #1

declare dso_local i32 @fs__capture_path(%struct.TYPE_8__*, i8*, i32*, i32) #1

declare dso_local i32 @uv_translate_sys_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
